--- a/genenetwork-api.ipynb
+++ b/genenetwork-api.ipynb
@@ -26,7 +26,16 @@
     "             (ice-9 pretty-print)\n",
     "             (ice-9 match)\n",
     "             (rnrs bytevectors))\n",
-    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "65957bdf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     ";; guile-pipe \n",
     ";; https://github.com/joshwalters/guile-pipe\n",
     "(define-syntax ->\n",
@@ -36,7 +45,7 @@
     "                ((_ x (f . (f-rest ...))) (f x f-rest ...))\n",
     "                ((_ x f) (f x))\n",
     "                ((_ x (f . (f-rest ...)) rest ...) (-> (f x f-rest ...) rest ...))\n",
-    "                ((_ x f rest ...) (-> (f x) rest ...))))\n",
+    "                ((_ x f rest ...) (-> (f x) rest ...)))h)\n",
     "\n",
     "(define-syntax ->>\n",
     "  (syntax-rules ()\n",
@@ -59,13 +68,15 @@
     "  (let-values (((_ y) (http-get url)))\n",
     "    (-> y utf8->string json-string->scm vector->list)))\n",
     "\n",
-    "(define api \"http://genenetwork.org/api/\")\n",
+    "(define api \"http://genenetwork.org/api/v_pre1/\")\n",
     "\n",
-    "(define bxd\n",
-    "  (let ((endpoint (string-append api \"v_pre1/datasets/mouse/bxd\")))\n",
-    "    (get-data endpoint)))\n",
+    "(define bxd \n",
+    "  (string-append api \"datasets/mouse/bxd\"))\n",
     "\n",
-    ";(map first ())"
+    "(define probe-set\n",
+    "  (string-append api \"dataset/HC_M2_0606_P\"))\n",
+    "\n",
+    "(get-data bxd)"
    ]
   },
   {
@@ -75,78 +86,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "(define u74av2\n",
+    "  (let ((data (first (get-data bxd))))\n",
+    "    (map first data)))\n",
+    "\n",
+    "u74av2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bda8b699",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "(focus (id) bxd)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4706bee8",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "(focus (key \"CreateTime\") bxd)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "601501a8",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "(focus (tail) (second bxd))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "aedd636f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "(focus (key-ref \"FullName\") (first bxd))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d692a866",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "(first bxd)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b8ebc02e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    ";; (focus (in \"public\" \"confidentiality\") (first bxd))\n",
-    "(first (first bxd))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "96796885",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "(focus (passes (compose (cut eq? <> 'a) first)) '(a b c))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "63cefb90",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "(put (passes* (compose list? first) (fst) (id)) '(d e f) '((a) b c))"
    ]
   },
   {
@@ -170,36 +124,6 @@
    "metadata": {},
    "source": [
     "![title](genenetwork-api-data.png)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "16d0e61b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "(focus (id) '(a b c))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "acc2f86b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "(focus (nth 10) bxd-mouse-data)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4e4de09b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "(list? bxd-mouse-data)"
    ]
   }
  ],
